cluster/gitops/security/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  labels:
    app.kubernetes.io/part-of: authentik
    external-dns.home.arpa/publish: "true"
spec:
  hostnames:
    - authentik.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
    - name: external-gateway
      namespace: networking
  rules:
    - backendRefs: &backend_ref
        - name: authentik-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /application/o/authorize
      backendRefs: *backend_ref
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              # Authentik is bugged and does not send this header on the /application/o/authorize for proxy providers
              # This is all or nothing, and does not support subdomain wildcards. I'd rather allow all domains than
              # have to maintain a list of domains here.
              - name: Access-Control-Allow-Origin
                value: "*"
